--- a/arch/arm64/configs/sagit_defconfig
+++ b/arch/arm64/configs/sagit_defconfig
@@ -739,3 +739,4 @@ CONFIG_WIREGUARD=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_DEFAULT_ANXIETY=y
 CONFIG_DEFAULT_IOSCHED="anxiety"
+CONFIG_IOSCHED_TRIPNDROID=y
